new- added select tag fix-class name and added csss

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -10,3 +10,8 @@ span{
     line-height: normal;
     font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
 }
+.figCaption{
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+}
